# mlb-payroll-efficiency

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/streamlit/: 1_⚾_League_Overview.py  viz_shared.py
apps/streamlit/pages/: 1_🏆_Player_Leaderboard.py  2_💰_Value_Analysis.py  3_📖_Definitions.py
docs/screenshots/: dbt_model_flow.drawio  pipeline_overview.drawio
extract/: fetch_player_stats.py  parse_payroll.py
infra/aws/: aws_setup.md
infra/snowflake/: 00_initial_setup.sql  01_context.sql  02_storage_integration.sql  03_stage_and_file_formats.sql  04_raw_tables.sql  05_copy_into_raw.sql  06_validation_queries.sql  README.md
transform/dbt/: dbt_project.yml
transform/dbt/models/marts/: dim_players.sql  dollars_per_war.sql  dollars_per_war_qualified.sql  schema.yml  team_war_value.sql
transform/dbt/models/staging/: schema.yml  sources.yml  stg_batting.sql  stg_payroll_other_payments.sql  stg_payroll_players.sql  stg_payroll_summary.sql  stg_pitching.sql
transform/dbt/seeds/: dim_teams.csv  schema.yml
transform/dbt/tests/: dim_teams_has_15_teams_per_league.sql  dim_teams_has_30_rows.sql
