[project]
name = "baseball-analytics"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "pybaseball>=2.2.7",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "snowflake-connector-python>=4.3.0",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]
